# modops_trader

./: LICENSE  README.md  pyproject.toml
.config/schwab/: config.yaml
D/modops_kb/vector_store/: vector_store.py
scripts/: init_kb.sh  run_ingest.py
src/modops_trader/: __init__.py  data_adapter.py  vector_store.py
src/modops_trader/pinn/: vol_surface_pinn.py
tests/: test_data_adapter.py  test_vol_surface_pinn.py
